# Course-paper

./: .env  .gitignore  docker-compose.yml  my_test.py  pyproject.toml  skipped_journals.csv  test.py
config/: settings.py  urls.py
csv/: authors_cleaned.json
main_app/: filters.py  models.py  urls.py  views.py
main_app/management/commands/: create_Citation_Database.py  delete.py  import_article.py  import_authors.py  import_journals.py  to_upper.py
main_app/migrations/: 0001_initial.py  0002_citationdatabase_alter_article_options_and_more.py
main_app/templates/main_app/: article_list.html
temp/: 0001_initial.py  0002_alter_article_options_alter_journal_options_and_more.py  0003_rename_level_2025_journal_level_and_more.py  0004_journal_state_alter_journal_level.py  0005_remove_article_abstract_remove_article_article_type_and_more.py
